# qml-drag-drop-list

./: CMakeLists.txt  Readme.md
src/: CMakeLists.txt  main.cpp
src/js/: logic.js
src/qml/: ListItem.qml  main.qml
